<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <GVL Name="GVL" Id="{5648e8bb-4114-4bd1-9293-b90fab2716d6}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	b_buttonYellow AT %I* : BOOL;
	b_buttonBlue AT %I* : BOOL;
	b_LampeCorrect AT %Q* : BOOL;
	b_LampeWrong AT %Q* : BOOL;
	bA_CodePins : ARRAY [1..4] OF BOOL;
	i_currentIndex : INT;
	i_correctCounter : INT;
	i_lightDuration : INT := 5000;		// ms
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>