<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="MAIN" Id="{575199f3-3758-40d7-b7a6-a55d5906ab45}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	b_YelloPushed : BOOL;
	b_BluePushed : BOOL;
	byte_decider : BYTE;
	i_EdgdetectorYellow : EdgeDetector_1;
	i_EdgdetectorBlue : EdgeDetector_1;
	b_risingEdge : BOOL;
	state : SafeState;
END_VAR

    ]]></Declaration>
    <Implementation>
      <ST><![CDATA[i_EdgdetectorYellow();
i_EdgdetectorYellow.inputValue := GVL.b_buttonYellow;
b_YelloPushed := i_EdgdetectorYellow.riesingEdge;
i_EdgdetectorBlue();
i_EdgdetectorBlue.inputValue := GVL.b_buttonBlue;
b_BluePushed := i_EdgdetectorBlue.riesingEdge;
IF b_YelloPushed OR b_BluePushed THEN
	b_risingEdge := TRUE;
	ELSE
	b_risingEdge := FALSE;
END_IF
CASE state OF
	0 : GVL.bA_CodePins[1] := TRUE;		// State = Init
		GVL.bA_CodePins[2] := FALSE;
		GVL.bA_CodePins[3] := FALSE;
		GVL.bA_CodePins[4] := TRUE;
		state :=1 ;		
	1 : GVL.b_LampeCorrect := FALSE;	// State = Close
		GVL.b_LampeWrong := FALSE;
		GVL.i_correctCounter := 0;
		GVL.i_currentIndex := 1;
		GVL.i_lightDuration := 5000;
		state :=3;		
	2 : IF GVL.i_lightDuration >0 THEN						// State = CorrectCode
		GVL.b_LampeCorrect := TRUE;							// Turn the Green 	
		GVL.i_lightDuration := GVL.i_lightDuration -10;
		ELSE
		GVL.b_LampeCorrect := FALSE;
		state :=1;				// Time is Over > Next state > Close		
		END_IF
	3 : IF b_risingEdge THEN	// State = CheCkDigit
		CASE GVL.i_currentIndex OF
			1 : IF GVL.bA_CodePins[GVL.i_currentIndex] = b_YelloPushed THEN
				GVL.i_currentIndex := GVL.i_currentIndex +1;
				ELSE
					state := 4;	
				END_IF
			2 : IF GVL.bA_CodePins[GVL.i_currentIndex] = NOT b_BluePushed THEN
				GVL.i_currentIndex := GVL.i_currentIndex +1;
				ELSE
					state := 4;	
				END_IF
			3 : IF GVL.bA_CodePins[GVL.i_currentIndex] = NOT b_BluePushed THEN
				GVL.i_currentIndex := GVL.i_currentIndex +1;
				ELSE
					state := 4;	
				END_IF
			4 : IF GVL.bA_CodePins[GVL.i_currentIndex] = b_YelloPushed THEN
					state := 2;	
				ELSE
					state := 4;	
				END_IF		
		END_CASE
		ELSE
		state := 3;		// no button detected > dont change State.
		END_IF
	4 : IF GVL.i_lightDuration >0 THEN						// State = WrongCode
		GVL.b_LampeWrong := TRUE;							// Turn the Red 	
		GVL.i_lightDuration := GVL.i_lightDuration -10;
		ELSE
		GVL.b_LampeWrong := FALSE;
		state :=1;				// Time is Over > Next state > Close		
		END_IF
END_CASE
]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="8" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="97" Count="1" />
      <LineId Id="96" Count="0" />
      <LineId Id="103" Count="0" />
      <LineId Id="147" Count="0" />
      <LineId Id="149" Count="1" />
      <LineId Id="148" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="40" Count="2" />
      <LineId Id="39" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="44" Count="2" />
      <LineId Id="72" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="80" Count="5" />
      <LineId Id="51" Count="0" />
      <LineId Id="60" Count="1" />
      <LineId Id="112" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="116" Count="1" />
      <LineId Id="115" Count="0" />
      <LineId Id="120" Count="3" />
      <LineId Id="119" Count="0" />
      <LineId Id="124" Count="3" />
      <LineId Id="118" Count="0" />
      <LineId Id="129" Count="3" />
      <LineId Id="128" Count="0" />
      <LineId Id="113" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="135" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="75" Count="1" />
      <LineId Id="79" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="34" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>